Updates to make code work again

--- a/roles/jumphost-conf/templates/pip-requirements.txt.j2
+++ b/roles/jumphost-conf/templates/pip-requirements.txt.j2
@@ -1,13 +1,16 @@
-setuptools == 34.3.2
+decorator == 4.4.0
+setuptools
 ansible == {{ jumphost_ansible_version }}
-python-openstackclient == 3.9.0
-python-cinderclient == 1.11.0
-python-novaclient == 7.1.0
-python-neutronclient == 6.1.0
-python-glanceclient == 2.6.0
-python-keystoneclient == 3.10.0
-shade == 1.16.0
+python-openstackclient
+python-cinderclient
+python-novaclient
+python-neutronclient
+python-glanceclient
+python-keystoneclient
+shade
 ansible-lint
-vspk == 5.3.1
 virtualenv
 awscli
+google-auth
+ansible[azure]
+
